--- a/tp1/css/style.css
+++ b/tp1/css/style.css
@@ -88,7 +88,7 @@ body{
 
 #footer {
     text-align: left;
-    background-image: url("css/footer.jpg");
+    background-image: url("footer.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
